# cheap-bob

./: README.md
backend/: .env.example  README.md  alembic.ini  entrypoint-dev.sh  entrypoint.sh  entrypoint_dev.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09d0c4536d4a_소비자_상세_정보_테이블_추가.py  19805a41764a_상품_테이블_재고_수량_컬럼_리팩토링_설정_수량_구매한_수량_조절_수량.py  31dfaee5fe42_고객_즐겨찾기_테이블_추가.py  3423034ddc8b_주문_상태_리팩토링_5단계_확장2.py  35fe3966d10e_create_users_table.py  384be52479f3_modify_users_table_customers_sellers.py  38d0b20148d7_가게_상품_결제_테이블_생성.py  5bed9c3b3e8a_장바구니_주문_테이블_최종_가격_컬럼_추가.py  5cdc727c6a30_주문_테이블_픽업_준비_완료_컬럼_삭제.py  6f53cccf8295_주문_상태_리팩토링_5단계_확장1.py  72985d1eaf5e_remove_pickup_from_orderstatus.py  74f193e5cbcd_address_이름_storeaddress로_변경.py  7c3f0f2ccb12_판매자_가게_주소_상세_정보_컬럼_추가.py  863c3695757f_주문_테이블_최종_가격_저장에서_원가_세일_정보_저장으로_변경_및_상품_.py  8a8f1111ff14_소비자_영양_타입_알레르기_선호_메뉴_테이블_추가.py  947d2e807710_가게_가까운_역_도보_시간_컬럼_추가.py  a4456cc53bfb_주문_상태_수정_created_at_reservation_at_.py  ab926b3beb8c_가게_위도_경도_위치_정보_컬럼_추가.py  ac1decff424c_소비자_토핑_정보_테이블_추가.py  acede93e3279_가게_운영_정보_운영_수정_예약_정보_테이블_추가.py  b4f2c8d9e3a1_change_orderstatus_accepted_to_accept.py  b96dec75bca7_장바구니_주문_관련_테이블_컬럼_이름_수정_및_누락된_컬럼_추가.py  c4d2736ac7f7_장바구니_주문_테이블_최종_가격_저장에서_원가_세일_정보_저장으로_변경.py  d06b19cb8302_주문_테이블_취소_사유_유저_선호_정보_컬럼_추가.py  e692df1f59d3_오래된_주문_테이블_삭제.py  ebad329de0a6_가게_sns_이미지_테이블_추가.py  f1408ccc3a63_상품_설명_컬럼_추가_상품_영양_정보_테이블_추가.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/config/: oauth.py  settings.py
backend/app/core/: exceptions.py  portone.py  (+2 more)
(+481 files in other folders)
